@@ -430,8 +430,32 @@ public class CheckerMain {
       args.add("-Xbootclasspath/p:" + String.join(File.pathSeparator, runtimeClasspath));
     } else {
       args.addAll(
+          // Keep this list in sync with the lists in checker-framework/build.gradle in
+          // compilerArgsForRunningCFs, the sections with labels "javac-jdk11-non-modularized",
+          // "maven", and "sbt" in the manual, and in the checker-framework-gradle-plugin,
+          // CheckerFrameworkPlugin#applyToProject
           Arrays.asList(
-              "--illegal-access=warn",
+              // These are required in Java 17+ because the --illegal-access option is set to deny
+              // by default.  None of these packages are accessed via reflection, so the module
+              // only needs to be exported, but not opened.
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+              "--add-exports",
+              "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+              // Required because the Checker Framework reflectively accesses private members in
+              // com.sun.tools.javac.comp.
               "--add-opens",
               "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"));
     }
@@ -513,7 +537,11 @@ public class CheckerMain {
    */
   private List<String> jarFiles(String directory) {
     File dir = new File(directory);
-    return Arrays.asList(dir.list((d, name) -> name.endsWith(".jar") || name.endsWith(".JAR")));
+    String[] jarFiles = dir.list((d, name) -> name.endsWith(".jar") || name.endsWith(".JAR"));
+    if (jarFiles == null) {
+      return Collections.emptyList();
+    }
+    return Arrays.asList(jarFiles);
   }
 
   /** Invoke the compiler with all relevant jars on its classpath and/or bootclasspath. */
